fix: spacing adjustments

--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,7 @@
 * {
   color: #18436e;
 }
-
 h3 {
-  font-size: 1.8rem;
-  margin: 1rem 0;
+  font-size: 1.5rem;
+  margin: 0 0 20px;
 }
